--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@
 # Get your key from: https://openrouter.ai/keys
 # OPENROUTER_API_KEY=sk-or-your-openrouter-key-here
 
+# Helicone API Key (optional - for monitoring and analytics)
+# Get your key from: https://helicone.ai/
+# HELICONE_API_KEY=sk-helicone-your-key-here
+
 # =============================================================================
 # Model Configuration (Optional)
 # =============================================================================
