--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@
 # - For Anthropic: claude-3-5-sonnet-20241022, claude-4-opus
 # - For OpenAI: gpt-4o, gpt-4.1-mini
 # - For OpenRouter: anthropic/claude-3-7-sonnet-20250219, openai/gpt-4o, meta-llama/llama-3.1-70b-instruct
+# - For OpenRouter (Free): qwen/qwen3-coder:free, deepseek/deepseek-r1:free, meta-llama/llama-3.3-70b-instruct:free
 # AI_MODEL=claude-3-5-sonnet-20241022
 
 # =============================================================================
